Reduced font sizes, aligned images and corrected positionings

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ body {
     background: rgba(0, 0, 0, 0.5);
 }
 
+.primary-color {
+  color: #FFE600 !important;
+}
+
 .homePage__container {
     background-color: #000;
     background-image: url('./assets/Screenshot\ 2022-03-05\ at\ 16.03\ 2.png');
